# SnakeGame

./: CMakeLists.txt
include/: Coordinates.hpp  Directions.hpp  Game.hpp  Move.hpp  Snake.hpp  SnakeObject.hpp
src/: Game.cpp  Move.cpp  Snake.cpp  SnakeObject.cpp  main.cpp  test  test.cpp
